# livicat

./: .env.example  .eslintrc.cjs  .gitignore  BRANCH_PROTECTION.md  CHANGELOG.md  CODING_RULES.md  GITHUB_ACTIONS_WORKFLOW.md  LICENSE  LIQUID_GLASS_USAGE.ts  README.md  README_DEVELOPER.md  STREAMER.md  agents.md  index.html  package-lock.json  package.json  test-all-analytics.sh  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md
.github/scripts/: get-cargo-version.cjs
.github/workflows/: auto-tag-and-release.yml  build-electron.yml  build-tauri.yml  build-windows-dev.yml  ci.yml  (+1 more)
.hermes/: pr_body.txt
docs/: AGENTS_KARPATHY.md  ARCHITECTURE.md  BRANCH_PROTECTION.md  BUILD.md  CI_SETUP.md  GALLERY_DESIGN.md  GITHUB_ACTIONS_WORKFLOW.md  GITHUB_RELEASE_FRESHNESS.md  LIQUID_GLASS_COMPLETE.md  LIQUID_GLASS_PREVIEW.md  LIQUID_GLASS_RED_THEME.md  PROJECT_PLAN.md  README.md  README_DEVELOPER.md  RELEASE.md  SENTRY_TROUBLESHOOT.md  SETUP_STATUS.md  STREAMER.md  TESTING.md  agents.md
electron/: main.cjs  preload.cjs
scripts/: dev.sh  release.sh  sync-version.cjs
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  analytics_tests.rs  headless.rs  lib.rs  obs.rs  processor.rs  renderer.rs  sentry.rs  sentry_integration_test.rs  sentry_live_test.rs  webview_chat.rs  windows_webview_tests.rs
(+108 files in other folders)
