[package]
name = "app"
version = "0.9.2"
description = "A Tauri App"
authors = ["you"]
license = "GPL-3.0-only"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["test"] }
tauri-plugin-log = "2"
tauri-plugin-aptabase = "1.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
dotenvy = "0.15"
sentry = "0.48"
sentry-rust-minidump = "0.7"
sentry-log = "0.48"
# Pin time to <0.3.48 to avoid conflicting trait impl with tauri-utils 2.9.2
# time 0.3.48 added From<HourBase> that conflicts with blanket impls in tauri-utils
time = ">=0.3.37, <0.3.48"
